--- a/rabbithole/src/app/sub-systems/profile/profile.component.scss
+++ b/rabbithole/src/app/sub-systems/profile/profile.component.scss
@@ -1,171 +1,177 @@
 html{
-    text-align: center;
+  text-align: center;
 }
 
 /*#profile-background{
-    margin-top:1%;
-    width: 75%;
-    height: 100%;
-    background-color: #3E3D3D;
-    border-radius: 5px;
-    box-shadow: 3px 3px 6px #3E3D3D;
-    text-align: center;
+  margin-top:1%;
+  width: 75%;
+  height: 100%;
+  background-color: #3E3D3D;
+  border-radius: 5px;
+  box-shadow: 3px 3px 6px #3E3D3D;
+  text-align: center;
 }*/
 
 #top-header{
-    text-align: center;
-    background-color: #3E3D3D;
-    padding: 10px;
-    width: 50%;
-    border-radius: 5px;
-    margin: auto;
-    position: relative;
-    height: auto;
-    margin-top: 20px;
+  text-align: center;
+  background-color: #3E3D3D;
+  padding: 10px;
+  width: 50%;
+  border-radius: 5px;
+  margin: auto;
+  position: relative;
+  height: auto;
+  margin-top: 20px;
 }
 
 
 
-  #avatar{
-    background: lightblue;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-  }
+#avatar{
+  background: lightblue;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
 
-  h1{
-    font-size: 2em; 
-    color: #ABFF4F;
-  }
+h1{
+  font-size: 2em; 
+  color: #ABFF4F;
+}
 
-  h2{
-    font-size: 1.5em;  
-    color: #ABFF4F;
-    margin-bottom: 10px;
-  }
+h2{
+  font-size: 1.5em;  
+  color: #ABFF4F;
+  margin-bottom: 10px;
+}
 
-  p{
-   margin-top: 10px;   
-   color: #EDEDED;
-   width: 60%;
-   margin: auto;
-  }
+p{
+ margin-top: 10px;   
+ color: #EDEDED;
+ width: 60%;
+ margin: auto;
+}
 
-  #main{
-    text-align: center;
+#main{
+  text-align: center;
+  background-color: #3E3D3D;
+  padding: 10px;
+  width: 50%;
+  margin-top: 20px;
+  border-radius: 5px;
+  height: auto;
+}
+
+button{
+  color: #EDEDED;
+  border-radius: 15px;
+  font-family: 'Open Sans', sans-serif !important;
+  text-align: center;
+  justify-content: center;
+  margin-bottom: 10px;
+  border: none;
+  background-color: #212121;
+  padding: 10px;
+}
+
+button:hover{
+  color: #A7FF2D;
+}
+
+label{
+  color: #EDEDED;
+  margin-right: 20px;
+  font-size: 1.1em;
+}
+
+#aupload{
+  color: #EDEDED;
+  margin-right:0px;
+}
+
+#auploadbtn{
+      margin-left: 0px;
+}
+
+.bio{
     background-color: #3E3D3D;
-    padding: 10px;
-    width: 50%;
-    margin-top: 20px;
+    margin: auto;
+    color: #212121;
+    width: 400px;
+    height: 200px;
     border-radius: 5px;
-    height: auto;
-  }
+    padding: 1em;
+    border: 2px solid transparent;
+    outline: none;
+}
 
-  button{
-    color: #EDEDED;
-    border-radius: 15px;
-    font-family: 'Open Sans', sans-serif !important;
-    text-align: center;
-    justify-content: center;
-    margin-bottom: 10px;
-    border: none;
-    background-color: #212121;
-    padding: 10px;
-  }
+.bio{
+    color:#EDEDED;
 
-  button:hover{
-    color: #A7FF2D;
-  }
+}
 
-  label{
-    color: #EDEDED;
-    margin-right: 20px;
-    font-size: 1.1em;
-  }
-
-  #aupload{
-    color: #EDEDED;
-    margin-right:0px;
-  }
-
-  #auploadbtn{
-        margin-left: 0px;
-  }
-
-  .bio{
-      background-color: #3E3D3D;
-      margin: auto;
-      color: #212121;
-      width: 400px;
-      height: 200px;
-      border-radius: 5px;
-      padding: 1em;
-      border: 2px solid transparent;
-      outline: none;
-  }
-
-  .bio{
-      color:#EDEDED;
-
-  }
-
-  /*.heading{
-    width: 100%;
-    height: 15%;
-    border-radius: 5px;
-    background-color: #636363;
-    position: sticky;
-    top: 0;
-    z-index: 999;
-    border-bottom: 1px #3E3D3D solid;
-  }*/
+/*.heading{
+  width: 100%;
+  height: 15%;
+  border-radius: 5px;
+  background-color: #636363;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  border-bottom: 1px #3E3D3D solid;
+}*/
 
 
-  #homescreenImage1 img{
-    z-index:-1;
-    position: absolute;
-    height: 30%;
-    width: 250px;
-    left: 30%;
-   
-    animation: float 4s ease-in-out infinite;
+#homescreenImage1 img{
+  z-index:-1;
+  position: absolute;
+  height: 30%;
+  width: 250px;
+  left: 30%;
+ 
+  animation: float 4s ease-in-out infinite;
 }
 
 #homescreenImage2 img
 {
-    z-index:-1;
-    position: absolute;
-    height: 60%;
-    // width: 60%;
-    left: 0%; 
-    bottom: 40%;
+  z-index:-1;
+  position: absolute;
+  height: 60%;
+  // width: 60%;
+  left: 0%; 
+  bottom: 40%;
 
-    animation: float 5s ease-in-out infinite;
+  animation: float 5s ease-in-out infinite;
 }
 
 #homescreenImage3 img{
-    z-index:-1;
-    position: absolute;
-    height: 60%;
-    // width: 60%;
-    right: 5%; 
-    bottom: 10%;
+  z-index:-1;
+  position: absolute;
+  height: 60%;
+  // width: 60%;
+  right: 5%; 
+  bottom: 10%;
 
-    animation: float 6s ease-in-out infinite;
+  animation: float 6s ease-in-out infinite;
 
 }
 
 @keyframes float {
-    0% { transform: translate(0,  0px); }
-    50%  { transform: translate(0, 10px); }
-    100%   { transform: translate(0, -0px); }  
+  0% { transform: translate(0,  0px); }
+  50%  { transform: translate(0, 10px); }
+  100%   { transform: translate(0, -0px); }  
 }
 
 @keyframes shine {
-    0% {
-        background-position-x: -500%;
-    }
-    100% {
-        background-position-x: 500%;
-    }
+  0% {
+      background-position-x: -500%;
+  }
+  100% {
+      background-position-x: 500%;
+  }
+}
+
+#signout{
+position: absolute;
+right:0.5em;
+top: 0.5em;
 }
