prrofile update preferences working

--- a/rabbithole/src/app/sub-systems/chat/components/preferences-popup/preferences-popup.component.scss
+++ b/rabbithole/src/app/sub-systems/chat/components/preferences-popup/preferences-popup.component.scss
@@ -93,3 +93,8 @@ src: local("Avenir"), url(../../../../../assets/fonts/Avenir/AvenirLTStd-Book.ot
 font-size: 1.2em;
 margin-top:10px;
 }
+
+
+#dialog{
+text-align: center;
+}
