--- a/rabbithole/src/app/sub-systems/profile/profile.component.scss
+++ b/rabbithole/src/app/sub-systems/profile/profile.component.scss
@@ -61,22 +61,6 @@ p{
   height: auto;
 }
 
-button{
-  color: #EDEDED;
-  border-radius: 15px;
-  font-family: 'Open Sans', sans-serif !important;
-  text-align: center;
-  justify-content: center;
-  margin-bottom: 10px;
-  border: none;
-  background-color: #212121;
-  padding: 10px;
-}
-
-button:hover{
-  color: #A7FF2D;
-}
-
 label{
   color: #EDEDED;
   margin-right: 20px;
@@ -175,3 +159,70 @@ position: absolute;
 right:0.5em;
 top: 0.5em;
 }
+
+svg{
+  fill: #A7FF2D;
+}
+
+input[type=checkbox]{
+  appearance: none;
+  }
+  
+  .regular-checkbox {
+  -webkit-appearance: none;
+  background-color: #fafafa;
+  border: 1px solid #cacece;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+  padding: 9px;
+  border-radius: 5px;
+  display: inline-block;
+  position: relative;
+  right: 0;
+  }
+  
+  .regular-checkbox:active, .regular-checkbox:checked:active {
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+  }
+  
+  .regular-checkbox:checked {
+  background-color: #e9ecee;
+  border: 1px solid #adb8c0;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
+  color: #99a1a7;
+  }
+  
+  .regular-checkbox:checked:after {
+  content: '\2714';
+  font-size: 14px;
+  position: absolute;
+  top: 0;
+  left: 3px;
+  color: #3e3d3d;
+  }
+
+  input[type=submit]{
+    background-color: #abff4f;
+    color: #3e3d3d;
+    border-radius: 1em;
+    font-family: "Avenir-roman";
+    font-family: "Avenir";
+    font-size: 1.2em;
+    margin-top:10px;
+    }
+
+    button{
+      background-color: #abff4f;
+      color: #99a1a7;
+      border-radius: 1em;
+      font-family: "Avenir-roman";
+      font-family: "Avenir";
+      font-size: 1.2em;
+      margin-top:10px;
+      border: none;
+    }
+
+    button:hover{
+      box-shadow: 0px 2px 5px rgba(167, 255, 45, 0.3);
+      color:#3E3D3D;
+    }
+    
