--- a/rabbithole/src/app/app.component.html
+++ b/rabbithole/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="authenticator.route === 'authenticated'">
   <mat-drawer-container class="example-container" autosize >
     <mat-drawer #drawer class="example-sidenav" mode="side" opened>
-        <button class="nav-button-top"><mat-icon>keyboard_arrow_left</mat-icon></button> <button class="nav-button-top"><mat-icon>keyboard_arrow_right</mat-icon></button>
+        <button class="nav-button-top" (click)="goBack()"><mat-icon>keyboard_arrow_left</mat-icon></button> <button class="nav-button-top" (click)="goForward()"><mat-icon>keyboard_arrow_right</mat-icon></button>
         <button class="nav-button" [routerLink]="'chat'"><mat-icon>chat_bubble_outline</mat-icon></button>  <!-- Get icon names from material.io/icons -->
         <button class="nav-button" href=""><mat-icon>groups</mat-icon></button>
         <button class="nav-button"><mat-icon>calendar_month</mat-icon></button>
