--- a/rabbithole/src/app/sub-systems/chat/components/chat-landing/chat-landing.component.scss
+++ b/rabbithole/src/app/sub-systems/chat/components/chat-landing/chat-landing.component.scss
@@ -1,3 +1,183 @@
+$greenColour: #A7FF2D;
+$backgroundGrey: #212121;
+#chatBoxLeft
+{
+    width: 20%;  
+    height: 100vh;
+    background-color: #3E3D3D;
+    position: absolute;
+    border-radius: 5px;
+    // margin: 2%;
+    box-shadow: 3px 3px 6px #3E3D3D;
+    // overflow: auto;
+    text-align: center;
+}
+
+
+#chatBoxLeft #chatBoxHeading{
+    color: $greenColour;
+    font-size: 30px;
+    margin-left: 15px;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    float: left;
+}
+
+
+#chatBoxLeft #MessageSearchInput
+{
+    color: #EDEDED;
+    font-family: 'Open Sans', sans-serif;
+    border-radius: 30px;
+    background: #3E3D3D;
+    border-color: $backgroundGrey;
+    padding: 20px; 
+
+    display: block;
+    width: 80%;
+    height: 5px;    
+    font-size: 12pt;
+    border: 0;
+    margin-top: 15px; 
+    margin-bottom: 10px; 
+
+    outline: 2px solid #636363;
+
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+#chatBoxLeft #MessageSearchInput:focus 
+{
+      outline: 2px solid $greenColour;
+      transition: outline 0.1s;
+      
+}
+
+
+#chatBoxLeft .chatBoxContactSelected
+{
+    background-color: #636363;
+    padding: 10px;
+    width: 80%;
+    border-radius: 5px;
+    margin-top:15px;
+    margin-left: 20px;
+    margin-right: 20px;
+    box-shadow: 3px 3px 6px #636363;
+    display: inline-block;
+    position: relative;
+    height: 8%;   
+    h1{
+        color: $greenColour;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 14pt;
+        float: left;
+    }
+    #contactMessageTimestamp{
+        color: #EDEDED;
+        opacity: 0.8;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 8pt;
+        float: right;
+    }
+
+}
+
+#chatBoxLeft .chatBoxContact
+{
+    background-color: #3E3D3D;
+    padding: 10px;
+    width: 80%;
+    border-radius: 5px;
+    margin-top:15px;
+    margin-left: 20px;
+    margin-right: 20px;
+    box-shadow: 3px 3px 6px $backgroundGrey;
+    display: inline-block;
+    position: relative;
+    height: 8%;   
+    h1{
+        color: $greenColour;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 14pt;
+        float: left;
+    }
+    #contactMessageTimestamp{
+        color: #EDEDED;
+        opacity: 0.8;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 8pt;
+        float: right;
+    }
+
+}
+
+//mat button stuff
+
+mat-button-toggle-group {
+    box-shadow: none;
+    border: none !important;
+    width: 100%;
+    align-items: center !important;
+    height: 80vh !important;
+    overflow: auto !important;
+  }
+  
+  mat-button-toggle {
+      border: 1px rgba(0,0,0,0) solid !important;
+      padding: 0 5px !important;
+      z-index: 3 !important;
+      width: 80% !important;
+      margin-top: 15px !important;
+      margin-bottom: 10px !important;
+      margin-left: 20px !important;
+      margin-right: 20px !important;
+    //   padding: 10px !important;
+      height: 9% !important;
+      box-shadow: 3px 3px 6px $backgroundGrey !important;
+
+      display: inline-block !important;
+      position: relative !important;
+      #contactMessageTimestamp{
+        color: #EDEDED;
+        opacity: 0.8;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 8pt;
+        float: right;
+    }
+  }
+  
+  mat-button-toggle:hover {
+    //   border: 1px #000 solid !important;
+    //   background-color: #FFF !important;
+    //   border-radius: 5px !important;
+    // transition: background-color 1s;  
+}
+
+
+.mat-button-toggle-checked {
+    box-shadow: 3px 3px 6px #636363 !important;
+    // border: 1px #000 solid !important;
+    border-radius: 5px !important;
+    background-color: #636363 !important;
+    // h1{color: red !important;}
+}
+
+mat-button-toggle-group::-webkit-scrollbar {
+    width: 0.5em;
+  }
+   
+  mat-button-toggle-group::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+  mat-button-toggle-group::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    border-radius: 5px;
+  }
+
 #MessageBoxMain #MessageBoxBackground
 {
     position: absolute;
@@ -42,6 +222,7 @@
     color: #ABFF4F;
     padding: 20px;
     margin: 0;
+    font-size: 20pt;
 }
 
 #MessageBoxMain #MessageBoxBackground #NoMessageError 
@@ -91,34 +272,6 @@
 }
 
 
-#MessageSearchInput
-{
-    color: #EDEDED;
-    font-family: 'Open Sans', sans-serif;
-    border-radius: 30px;
-    background: #3E3D3D;
-    padding: 20px; 
-
-    display: block;
-    width: 580px;
-    height: 5px;    
-    font-size: 12pt;
-    border: 0;
-    margin-top: 5px; 
-    margin-bottom: 10px; 
-
-    margin-left: auto;
-    margin-right: auto;
-    
-}
-
-#MessageSearchInput:focus 
-{
-      outline: 2px solid #ABFF4F;
-      transition: outline 0.1s;
-      
-}
-
 #messageTextbox
 {
     font-family: 'Open Sans', sans-serif;
@@ -126,16 +279,18 @@
     border-radius: 5px;
     background: #3E3D3D;
     color: #EDEDED;
-    width: 600px;
+    width: 650px;
     font-size: 12pt;
     border: 0;
-    outline: 0;
-    margin: 5px;
+    outline: 2px;
+    margin: 15px;
     padding: 10px;
     margin-top: 5px; 
     margin-bottom: 5px; 
     position: relative;
     left: 1.9em;
+    // border: 1px solid #CCCCCC !important;
+    // height: ;
     // margin-left: auto;
     // margin-right: auto;
     
@@ -143,8 +298,12 @@
 
 #messageTextbox:focus 
 {
-      outline: 2px solid white;
-      transition: outline 0.1s ease;
+
+    //   outline: 2px solid $greenColour;
+    border: 2px solid $greenColour;
+      
+      box-shadow: 0px 0px 10px $greenColour;
+      transition: box-shadow border 0.1s;
       /*transition: 0.5s;*/
       
 }
