Added seperate claims table
- For pending, accepted and declined

--- a/rabbithole/src/app/sub-systems/claims/screens/view-claims/view-claims.component.html
+++ b/rabbithole/src/app/sub-systems/claims/screens/view-claims/view-claims.component.html
@@ -15,7 +15,7 @@
           <span matBadge="4" matBadgeOverlap="false"> Pending </span>
         </ng-template>
         <div class="tab-content">
-            <app-claims-table></app-claims-table>
+            <app-pending-table></app-pending-table>
         </div>
     </mat-tab>
     <mat-tab>
@@ -23,7 +23,7 @@
             <span matBadge="2" matBadgeOverlap="false"> Accepted </span>
         </ng-template>
         <div class="tab-content">
-            <app-claims-table></app-claims-table>
+            <app-accepted-table></app-accepted-table>
         </div>
     </mat-tab>
     <mat-tab>
@@ -31,7 +31,7 @@
             <span matBadge="8" matBadgeOverlap="false"> Declined </span>
         </ng-template>
         <div class="tab-content">
-            <app-claims-table></app-claims-table>
+            <app-declined-table></app-declined-table>
         </div>
     </mat-tab>
 </mat-tab-group>
