Small fixes to claims
- Still need to change email to be dynamic according to the user
- Need to change the popup styling

--- a/rabbithole/src/app/sub-systems/claims/screens/create-claim/create-claim.component.html
+++ b/rabbithole/src/app/sub-systems/claims/screens/create-claim/create-claim.component.html
@@ -59,10 +59,10 @@
             <mat-form-field appearance="fill" class="form-field">
               <mat-label>Type of claim</mat-label>
               <mat-select class="type-select" formControlName="claimType">
-                <mat-option class="type-option" value="travel"> Travel </mat-option>
-                <mat-option class="type-option" value="entertainment"> Entertainment </mat-option>
-                <mat-option class="type-option" value="cellphone"> Data / Cellphone </mat-option>
-                <mat-option class="type-option" value="miscellaneous"> Miscellaneous </mat-option>
+                <mat-option class="type-option" value="Travel"> Travel </mat-option>
+                <mat-option class="type-option" value="Entertainment"> Entertainment </mat-option>
+                <mat-option class="type-option" value="Cellphone / Data"> Data / Cellphone </mat-option>
+                <mat-option class="type-option" value="Miscellaneous"> Miscellaneous </mat-option>
               </mat-select>
               <mat-hint>Select your claim category</mat-hint>
             </mat-form-field>
