--- a/rabbithole/src/app/sub-systems/claims/components/success-error-popup/success-error-popup.component.html
+++ b/rabbithole/src/app/sub-systems/claims/components/success-error-popup/success-error-popup.component.html
@@ -1,7 +1,8 @@
-<h1 mat-dialog-title> Claim Submit. </h1>
+<h1 mat-dialog-title> Claim Processed </h1>
 <div mat-dialog-content>
   {{ message }}
 </div>
-<div mat-dialog-actions>
+<br/>
+<div mat-dialog-actions align="center">
   <button mat-button mat-dialog-close (click)="onClosed();" cdkFocusInitial>Continue</button>
 </div>
