--- a/rabbithole/src/app/sub-systems/profile/profile.component.html
+++ b/rabbithole/src/app/sub-systems/profile/profile.component.html
@@ -3,6 +3,8 @@
 <div id="main">
     <div class="heading">
     <h2>Settings</h2>
+    <div *ngIf="errormsg"><h3>{{errormsg}}</h3></div>
+    <div *ngIf="successmsg" ><h3 id="success">{{successmsg}}</h3></div>
     </div>
     <form [formGroup]="userForm" >
        <!-- <div *ngIf="errormsg" class="alert alert-warning alert-dismissable fade show" role="alert">
