--- a/rabbithole/src/app/sub-systems/chat/components/message-box/message-box/message-box.component.html
+++ b/rabbithole/src/app/sub-systems/chat/components/message-box/message-box/message-box.component.html
@@ -1,5 +1,5 @@
 <div id="MessageBubble">
     <p>{{message}}</p>
-    <span id="MessageTimestamp">2022/03/27 11:30 am</span>
+    <span id="MessageTimestamp">{{timestamp}}</span>
 </div>
 <br>
