--- a/rabbithole/src/app/sub-systems/chat/components/chat-landing/chat-landing.component.html
+++ b/rabbithole/src/app/sub-systems/chat/components/chat-landing/chat-landing.component.html
@@ -1,41 +1,54 @@
 
         <div id="MessageBoxMain">
-            <div id="chatBoxLeft">
+            <div id="chatBoxLeft" >
                 <div id="chatBoxHeading">Contacts</div>
                 <input type="text" name="MessageSearchInput" #receiverName id="MessageSearchInput" #MessageSearchInput placeholder="Search for people to message"/>                
-                    <mat-button-toggle-group [vertical]="true" class="mat-elevation-z0" #toggleBtn="matButtonToggleGroup">
-                        <mat-button-toggle class="chatBoxContact" *ngFor="let item of contacts" [value]="item.email" value="SelectedContact" (click)="changeDisplayedUser(item.email)">
-                            <h1>{{ item.email }}</h1> 
+                    <mat-button-toggle-group #contactBox [vertical]="true" class="mat-elevation-z0" #toggleBtn="matButtonToggleGroup">
+                        <mat-button-toggle id = {{item.email}} class="chatBoxContact" *ngFor="let item of contacts" [value]="item.email" value="SelectedContact" (click)="changeDisplayedUser(item.email)">
+                            <h1  >{{ item.email }}</h1> 
                             
                           </mat-button-toggle>
                     </mat-button-toggle-group>
             </div>
 
-            <div id="MessageBoxBackground">
+            <div id="MessageBoxBackground" *ngIf="messages?.length > 0">
                 <div id="MessageBoxTopBar">
                     <h2>{{toggleBtn.value}}</h2>
                 </div>
         
-                <ng-container>
-
-
-                    <!-- <app-message-box message="{{}}"></app-message-box> -->
-
+                <ng-container #messageContainer class="messageContainer" >
+                    <app-message-box *ngFor="let item of messages" message="{{item.message}}" timestamp="{{item.timestamp}}" ></app-message-box>
                 </ng-container>
-                
-     
+
+
             </div>        
+
+            <div id="MessageBoxBackground" *ngIf="messages?.length === 0 && activeRecipient != '' " style="opacity: 1;">
+                <ng-container #messageContainer class="messageContainer" >
+                    <div id="NoMessageError">
+                        <img src="../../../../../assets/images/retro_blur.png" alt="">
+                        <p>No messages to display... Try sending a message</p>
+                    </div>
+                </ng-container>
+            </div>
+
+            <div  id="MessageBoxBackground" *ngIf="activeRecipient == '' && messages?.length === 0 ">
+                <ng-container #messageContainer class="messageContainer" >
+                    <div id="NoMessageError">
+                        <img src="../../../../../assets/images/retro_blur.png" alt="">
+                        <p>Select a contact to view messages</p>
+                    </div>
+                </ng-container>
+            </div>
             
-            <div id="MessageForm">	
-                    
-                
+            <div id="MessageForm" *ngIf = "activeRecipient != ''">	
                 <textarea #messageTextbox id="messageTextbox" name="messageTextbox" rows="4" cols="50" placeholder="Type a new message..." ></textarea>
                 <button id="send" class="send-button material-icons" (click)="messageClickEvent(MessageSearchInput.value, messageTextbox.value)" >send</button>
                 <div id="MessageOptions">
-                <button class="attach-button material-icons" id="attach">attach_file</button>
                 </div>
-                
             </div>
+
+
         
             
         </div>
